--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div id="header">
             <div class="header-logo">
-                <a href="#"><img src="" alt="image" /></a>
+                <a href="#"><img src="/Images/logo.jpg" alt="image" /></a>
             </div>
 
             <div class="header-list">
@@ -31,5 +33,410 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- ----------------------------Hero Section---------------------------- -->
+        <section id="hero">
+            <h4>Trade-in-offer</h4>
+            <h2>Super value deals</h2>
+            <h1>On all Products</h1>
+            <p>save more coupons & up to 70% off!</p>
+            <button>Shop Now</button>
+        </section>
+
+        <!-- ----------------------------Features Section---------------------------- -->
+        <section id="features" class="section-p1">
+            <div class="f-box">
+                <img src="/Images/Features/f1.jpg" alt="Free shipping">
+                <h6>Free Shipping</h6>
+            </div>
+            <div class="f-box">
+                <img src="/Images/Features/f2.jpg" alt="Online Order">
+                <h6>Online Order</h6>
+            </div>
+            <div class="f-box">
+                <img src="/Images/Features/f3.jpeg" alt="Save Money">
+                <h6>Save Money</h6>
+            </div>
+            <div class="f-box">
+                <img src="/Images/Features/f41.jpg" alt="Promotions">
+                <h6>Promotions</h6>
+            </div>
+            <div class="f-box">
+                <img src="/Images/Features/f5.jpeg" alt="Happy Sell">
+                <h6>Happy Sell</h6>
+            </div>
+            <div class="f-box">
+                <img src="/Images/Features/f6.png" alt="24/7 Support">
+                <h6>24/7 Support</h6>
+            </div>
+        </section>
+
+        <!-- ----------------------------Product Section---------------------------- -->
+        <section class="product-section" class="section-p1">
+            <h1>Features Products</h1>
+            <p>Summer Collection New Modern Design</p>
+            <div class="pro-collection">
+                <div class="product-cart">
+                    <img src="/Images/Product/t1.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t2.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t3.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t4.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t5.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t6.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t7.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Product/t8.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- ----------------------------Off Banner Section---------------------------- -->
+        <section id="off-banner" class="section-m1">
+            <h4>Repair Service</h4>
+            <h2>Up to 70% Off - All T-Shirts & Accessories</h2>
+            <button class="normal">Explore More</button>
+        </section>
+
+        <!-- ----------------------------New Arrivals --------------------------------------->
+        <section class="product-section" class="section-p1">
+            <h1>New Arrivals</h1>
+            <p>Summer Collection New Modern Design</p>
+            <div class="pro-collection">
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n1.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n2.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n3.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n4.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n5.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n6.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n7.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+
+                <div class="product-cart">
+                    <img src="/Images/Arrivals/n8.jpg" alt="">
+                    <span>Adidas</span>
+                    <h4>Floral T-Shirts</h4>
+                    <div class="stars">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="price">$78</h4>
+                    <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- ---------------------------Banner section--------------------------- -->
+        <section id="banners" class="section-p1">
+            <div class="big-banners">
+                <div class="big-banners-1">
+                    <h4>Crazy deals</h4>
+                    <h2>Buy 1 Get 1 Free</h2>
+                    <span>The best classic dress</span>
+                    <button class="banner-btn">Learn More</button>
+                </div>
+                <div class="big-banners-2">
+                    <h4>Spring/Summer</h4>
+                    <h2>Upcoming season</h2>
+                    <span>The best classic dress is on sale at 30dc</span>
+                    <button class="banner-btn">Collection</button>
+                </div>
+            </div>
+
+            <div class="small-banners">
+                <div class="small-banners-1">
+                    <h2>Seasonal Sale</h2>
+                    <h5>Winter Collection 50% Off</h5>
+                </div>
+                <div class="small-banners-2">
+                    <h2>New Footware Collection</h2>
+                    <h5>50% Off</h5>
+                </div>
+                <div class="small-banners-3">
+                    <h2>T-Shirts</h2>
+                    <h5>Trendy</h5>
+                </div>
+            </div>
+        </section>
+
+        <!-- ------------------signup section--------------- -->
+        <section id="newsletter">
+            <div class="news-letter-text">
+                <h3>Sign Up For Newsletters</h3>
+                <h5>get email updates about latest shop and <span>special offers</span></h5>
+            </div>
+
+            <div class="form">
+                <input type="email" placeholder="Your email address" id="email-input">
+                <button type="button">SignUp</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- ---------------------Footer Section--------------------- -->
+    <footer>
+        <div id="footer">
+            <div class="contact">
+                <a href="#"><img src="Images/logo.jpg" alt=""></a>
+                <br>
+                <br>
+                <br>
+                <h3>Contact</h3>
+                <address>
+                    <p><b>Address:</b> Wellington Road, Street 32. San Francisco</p>
+                    <p><b>Phone:</b> Wellington Road, Street 32. San Francisco</p>
+                    <p><b>Hours</b> 10:00 - 18:00. Mon - Sat</p>
+                </address>
+                <h3>Follow Us</h3>
+                <br>
+                <div class="socials">
+                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="about">
+                <h3>About</h3>
+                <br>
+                <a href="#">About Us</a>
+                <a href="#">Delivery Information</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="myaccount">
+                <h3>My Account</h3>
+                <br>
+                <a href="#">Sign In</a>
+                <a href="#">View Cart</a>
+                <a href="#">My waitlist</a>
+                <a href="#">Track My Order</a>
+                <a href="#">Help</a>
+            </div>
+            <div class="install">
+                <h3>Install App</h3>
+                <br>
+                <p>From App Store or Google Play</p>
+                <div class="download">
+                    <a href="#"><img src="Images/Pay/app.jpg" alt=""></a>
+                    <a href="#"><img src="Images/Pay/play.jpg" alt=""></a>
+                </div>
+                <p>Secured Payment</p>
+                <img src="Images/Pay/pay.jpg" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
